# 42-ft_ping

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: calc.c  main.c  packets.c  setup.c
src/includes/: context.h  ftp_bool.h  ftp_errors.h  ftp_methods.h
